syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/averageNetAdmin/andproxy/andproto/models;models";

message HttpHandler {
  int64 id = 1;
  string name = 2;
  int32 port = 3;
  repeated int64 hosts = 4;
  bool secure = 5;
  int64 max_connections = 6;
  Status status = 7;
  enum Status {
    Unset = 0;
    Listen = 1;
    Stopped = 2;
  }
}

message HttpHost {
  int64 id = 1;
  string address = 2;
  string cert_path = 3;
  string cert_key_path = 4;
  repeated int64 paths = 5;
  int64 max_connections = 6;
  Status status = 7;
  enum Status {
    Unset = 0;
    Active = 1;
    Disabled = 2;
  }
}

message HttpPath {
  int64 id = 1;
  string path = 2;
  bool enable_caching = 3;
  int64 request_timeout = 4;
  string type = 5;
  HttpParams set_input = 6;
  HttpParams set_output = 7;
  StaticHttpResponse static_response = 8;
  repeated int64 proxy_filters = 9;
  int64 max_connections = 10;
  Status status = 11;
  enum Status {
    Unset = 0;
    Active = 1;
    Disabled = 2;
  }
}

message HttpParams {
  repeated HttpHeader headers = 1;
  repeated HttpCookie cookies = 2;
}

message HttpCookie {
  string key = 1;
  string value = 2;
}

message HttpHeader {
  string key = 1;
  string value = 2;
}

message StaticHttpResponse {
  int32 status = 1;
  string redirect_to = 2;
  bool add_prev_path = 3;
  string custom_body = 4;
}